written code of sort an array with two and three types, 0,1,2 and even or odd etc